--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,25 @@
 platform = espressif32
 board = sparkfun_esp32s2_thing_plus
 framework = arduino
+
+build_flags =
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    ;-DARDUINO_USB_MANUFACTURER="Schwimmflugel"
+    ;-DARDUINO_USB_PRODUCT="Bad_Doctor_v1"
+
+; change MCU frequency
+;board_build.f_cpu = 240000000L
+
+;board_upload.use_1200bps_touch = yes
+;board_upload.wait_for_upload_port = yes
+;board_upload.require_upload_port = yes
+;monitor_rts = 0
+;monitor_dtr = 0
+
+;upload_flags =
+;   --after=no_reset
+
 ;lib_deps = 
 ;	adafruit/Adafruit SSD1306@^2.5.9
 ;	adafruit/Adafruit GFX Library@^1.11.9
+
